--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: bisque;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  margin: 2vh, 0;
+  padding: 3vh;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+a {
+  color: rgb(110, 14, 102);
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+}
+
+.btn {
+  margin-top: 25px;
+  font-size: 2em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-shadow: 2px 2px #af1b8f;
+}
+
+#home_img {
+  width: 100vh;
+}
+
+.grid {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.joke_txt {
+  font-family: "Indie Flower", cursive !important;
+  font-size: 2em;
+  margin: 100px 100px;
+  font-weight: bold;
 }
